<resources>
    <string name="app_name">Lab1</string>
    <string name="button">Button</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="coma">,</string>
    <string name="backspace"><![CDATA[<=]]></string>

    <!--CURRENCY_COEFFICIENTS-->
    <string name="USDUSD">1</string>
    <string name="USDEUR">0.84</string>
    <string name="USDBLR">2.59</string>

    <string name="EUREUR">1</string>
    <string name="EURUSD">1.17</string>
    <string name="EURBLR">3.02</string>

    <string name="BLRBLR">1</string>
    <string name="BLRUSD">0.39</string>
    <string name="BLREUR">0.33</string>

    <string-array name="currencyOptions">
        <item>USD</item>
        <item>EUR</item>
        <item>BLR</item>
    </string-array>

    <string-array name="distanceOptions">
        <item>M</item>
        <item>KM</item>
        <item>Cм</item>
    </string-array>

    <string-array name="weightOptions">
        <item>Pound</item>
        <item>кг</item>
        <item>Pud</item>
    </string-array>

    <string-array name="translationOptions">
        <item>currency</item>
        <item>distance</item>
        <item>weight</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>